1.7
  - Exec functions have gained a std_in argument
  - Windows: switch to wchar_t filepaths and args for better UTF-8 support

1.6
  - Faster serialization for raw vectors in eval_fork()

1.5
  - rlimit values 0 are now ignored and Inf means RLIM_INFINITY
  - Windows: fix crash for very long commands

1.4
  - Fix bug when 'timeout' was given as integer instead of double
  - Workaround undefined RLIMIT_AS on OpenBSD
  - Use graphics.off() instead of dev.off() to shut down all graphics devices
  - Added aa_config() to query apparmor status on supported platforms
  - On Linux, eval_fork() now kills entire child process group when parent dies
  - The exec() functions no longer change process group on OSX

1.3
  - Use AppArmor (required) on Debian/Ubuntu in eval_safe()
  - Disable console and finalizers inside forked procs
  - Add support for rlimits, priority, uid, gid and profile in eval_safe()

1.2:
  - Windows: show informative system error messages on failures
  - Unix: exec_background() does not wait for 1/2 a second
    (#6, #7, @gaborcsardi)
  - Unix: new functions eval_fork() and eval_safe()
  - Many little tweaks

1.1:
  - Switch from SIGHUP to SIGKILL to kill child process
  - Child now uses a pipe to send errno to parent when execvp() fails
  - Unit tests that require 'ping' are skipped if 'ping' is not available

1.0:
  - CRAN release